feat: migrate AgentHub app
Replace scaffold artifacts with the runnable backend/frontend app. Add tenant-scoped auth/RBAC mocks, RAG adapters, workflows, traces, evaluations, bot webhooks, and docs.